[tool.scikit-build.cmake.define]
SOME_DEFINE = {env="SOME_DEFINE", default="EMPTY"}


[build-system]
requires = ["scikit-build-core", "pybind11", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.15"
build-dir = "build" # The build directory. Defaults to a temporary directory, but can be set.
cmake.build-type = "Debug"  # TODO: for now setup debug builds - update this once we release!
# Select the editable mode to use. Can be "redirect" (default) or "inplace".
# editable.mode = "inplace"
wheel.packages = ["cytnx"]


[project]
name = "cytnx"
version = "2.0.0a1"
# dynamic = ["version"] # TODO: does this still work with scikit build?
description = ""
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "Apache_v2"}
authors = [
    {name = "TeNPy Developer Team"},
]
# maintainers = [
#     {name = "Johannes Hauschild", email="cytnx@johannes-hauschild.de"},
#     ...
# ]
keywords = ["tensor networks", "tensor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    # "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
io = ["h5py", "pyyaml"]
test = ["pytest>=6.0", "sympy"]
extra = ["yapf==0.28.0", "docformatter==1.3.1"]
docbuild = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex",
    "sphinx_copybutton",
]
all = ["cytnx[io, test, extra, docbuild]"]


[project.urls]
"Homepage" = "https://github.com/tenpy/cytnx_v2"
# "Documentation" = "https://cytnx.readthedocs.io/"
"Source" = "https://github.com/tenpy/cytnx_v2"
"Bug Tracker" = "https://github.com/tenpy/cytnx_v2/issues"


# [project.scripts]
# cytnx-run = "cytnx:console_main"


[tool.setuptools.packages.find]
include = ['cytnx*']


[tool.pytest.ini_options]
filterwarnings = [
    "error",  # consider all unfiltered warnings error. they should be handled or filtered.
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "FusionTree: marks tests that use the FusionTreeBackend.",
    "example: marks tests as example (deselect with '-m \"not example\"')",
]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)-8s %(filename)-16s%(lineno)4d: %(message)s"
testpaths = ["tests"]
