[tool.scikit-build.cmake.define]
BUILD_DOC = {env="BUILD_DOC", default="OFF"}


[build-system]
requires = ["scikit-build-core", "pybind11", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.15"
build-dir = "build" # The build directory. Defaults to a temporary directory, but can be set.
cmake.build-type = "Debug"  # TODO: for now setup debug builds - update this once we release!
# Select the editable mode to use. Can be "redirect" (default) or "inplace".
# editable.mode = "inplace"
wheel.packages = ["cyten"]


[project]
name = "cyten"
version = "0.1"
# dynamic = ["version"] # TODO: does this still work with scikit build?
description = ""
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "Apache_v2"}
# authors = [
#     {name = "TeNPy Developer Team"},
#     {name = "cyten Developer Team"},
# ]
# maintainers = [
#     {name = "Johannes Hauschild", email="cyten@johannes-hauschild.de"},
#     ...
# ]
keywords = ["tensor networks", "tensor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    # "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
io = ["h5py", "pyyaml"]
gpu = ["torch"]
test = ["pytest>=6.0", "sympy", "cyten[io, gpu]"]
extra = ["yapf==0.28.0", "docformatter==1.3.1"]
docbuild = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex",
    "sphinx_copybutton",
]
all = ["cyten[io, test, extra, docbuild]"]


[project.urls]
"Homepage" = "https://github.com/tenpy/cyten"
# "Documentation" = "https://cyten.readthedocs.io/"
"Source" = "https://github.com/tenpy/cyten"
"Bug Tracker" = "https://github.com/tenpy/cyten/issues"


# [project.scripts]
# cyten-run = "cyten:console_main"


[tool.setuptools.packages.find]
include = ['cyten*']


[tool.pytest.ini_options]
filterwarnings = [
    "error",  # consider all unfiltered warnings error. they should be handled or filtered.
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "FusionTree: marks tests that use the FusionTreeBackend.",
    "numpy: marks tests that use the numpy block backend.",
    "torch: marks tests that use the torch block backend.",
    "example: marks tests as example (deselect with '-m \"not example\"')",
    "deselect_invalid_ChargedTensor_cases: modifies collection. See notes in conftest.py",
]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)-8s %(filename)-16s%(lineno)4d: %(message)s"
testpaths = ["tests"]
